--- a/index.html
+++ b/index.html
@@ -7,10 +7,59 @@
     <title>Pokemon Search</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body>
-    <div id="taco" class="text-center">
-      <h1 class="text-6xl">Pokemon Search</h1>
-    </div>
+  <body class="bg-yellow-200">
+    <main>
+      <!-- Header  -->
+      <div class="py-8 bg-blue-900">
+        <h1
+          class="text-center text-4xl md:text-6xl lg:text-6xl text-yellow-300 font-bold uppercase"
+        >
+          Pokémon Search
+        </h1>
+        <!-- Inputs -->
+        <div
+          class="mx-auto max-w-4xl px-4 mt-8 flex flex-col md:flex-row md:justify-between items-center gap-3"
+        >
+          <!-- Search -->
+          <div id="search-input" class="flex w-full md:w-2/3 shadow-md;">
+            <input
+              id=""
+              type="text"
+              class="border-yellow-500 border-2 p-2 w-full rounded-l-xl h-12 md:h-16"
+              placeholder="Type name or number (eg. Bulbasaur, 35)"
+            />
+            <button
+              class="bg-yellow-500 text-white px-4 hover:bg-yellow-600 rounded-r-xl uppercase font-bold"
+            >
+              Search
+            </button>
+          </div>
+
+          <p class="text-white">- OR -</p>
+
+          <!-- Random Button -->
+          <button
+            id="random-button"
+            class="bg-red-600 hover:bg-red-700 text-white py-2 px-6 rounded-xl h-12 md:h-16 uppercase font-bold shadow-md"
+          >
+            Get Random
+          </button>
+        </div>
+      </div>
+      <!-- Data container -->
+      <div id="data-container" class="mx-auto max-w-4xl px-4 my-10">
+        <!-- No data found -->
+        <div
+          id="no-data"
+          class="hidden bg-white border-4 border-red-400 shadow shadow-red-300 py-2 px-4 rounded-lg h-32 flex items-center"
+        >
+          <p class="text-3xl">No Pokémon Found. Try a different query.</p>
+        </div>
+
+        <!-- Data found -->
+        <div id="pokemon-data" class="grid grid-cols-2 md:grid-cols-4 md:grid-rows-6 gap-2"></div>
+      </div>
+    </main>
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
