Add initial prompt

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
       </div>
       <!-- Data container -->
       <div id="data-container" class="mx-auto max-w-4xl px-4 my-10">
+        <!-- Prompt to do initial search-->
+        <div
+          id="initial-search-prompt"
+          class="bg-white border-4 border-blue-400 shadow shadow-red-300 py-2 px-4 rounded-lg h-32 flex items-center"
+        >
+          <p class="text-3xl">Search for a Pokémon by name or number.</p>
+        </div>
+
         <!-- No data found -->
         <div
           id="no-data"
